[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/UI_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/UI/plus.png" type="Texture" id=2]
[ext_resource path="res://scripts/FeatureBuilder.gd" type="Script" id=3]
[ext_resource path="res://scenes/helper/DeleteConfirmation.tscn" type="PackedScene" id=4]

[node name="FeatureBuilder" type="HBoxContainer"]
margin_right = 1080.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 100 )
theme = ExtResource( 1 )
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnAdd" type="Button" parent="."]
margin_right = 112.0
margin_bottom = 214.0
theme = ExtResource( 1 )
icon = ExtResource( 2 )

[node name="TxtLabel" type="LineEdit" parent="."]
margin_left = 116.0
margin_right = 440.0
margin_bottom = 214.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "write here..."

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 444.0
margin_right = 816.0
margin_bottom = 214.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
rounded = true
prefix = "Amount"

[node name="BtnDelete" type="Button" parent="."]
margin_left = 820.0
margin_right = 965.0
margin_bottom = 214.0
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Delete"

[node name="PopupPanel" parent="." instance=ExtResource( 4 )]
